2010-10-15  Robert Larice
 * src/include/ngspice.h ,
 * src/main.c ,
 * src/misc/misc_time.h :
    collect extern timebegin in "misc_time.h"

2010-10-15  Robert Larice
 * src/ciderlib/support/globals.c ,
 * src/ciderlib/support/mater.c ,
 * src/frontend/numparam/spicenum.c ,
 * src/frontend/options.c ,
 * src/frontend/plotting/graf.c ,
 * src/maths/misc/randnumb.c ,
 * src/maths/ni/niniter.c ,
 * src/spicelib/analysis/cktdltn.c ,
 * src/spicelib/analysis/noisean.c ,
 * src/spicelib/devices/nbjt/nbjttemp.c ,
 * src/spicelib/devices/nbjt2/nbt2acld.c ,
 * src/spicelib/devices/nbjt2/nbt2load.c ,
 * src/spicelib/devices/nbjt2/nbt2pzld.c ,
 * src/spicelib/devices/numd2/nud2acld.c ,
 * src/spicelib/devices/numd2/nud2load.c ,
 * src/spicelib/devices/numd2/nud2pzld.c ,
 * src/spicelib/devices/numos/nummacld.c ,
 * src/spicelib/devices/numos/nummload.c ,
 * src/spicelib/devices/numos/nummpzld.c ,
 * src/xspice/ipc/ipc.c :
    remove local prototypes, which are allready included

2010-10-15  Robert Larice
 * src/ciderlib/support/database.c ,
 * src/ciderlib/support/geominfo.c ,
 * src/ciderlib/support/globals.c ,
 * src/ciderlib/support/integset.c ,
 * src/ciderlib/support/integuse.c ,
 * src/ciderlib/support/logfile.c ,
 * src/ciderlib/support/mater.c ,
 * src/ciderlib/support/misc.c ,
 * src/ciderlib/support/mobil.c ,
 * src/ciderlib/support/recomb.c ,
 * src/ciderlib/support/suprmitf.c :
    prototypes, make use of "cidersupt.h"

2010-10-15  Robert Larice
 * src/tclspice.c :
    collect extern JMP_BUF jbuf in "frontend/signal_handler.h"

2010-10-15  Robert Larice
 * src/include/fteext.h :
    avoid redeclaration, signalhandler

2010-10-15  Robert Larice
 * src/frontend/com_fft.c ,
 * src/frontend/com_fft.h :
    remove static fftext() from "com_fft.h"

2010-10-15  Robert Larice
 * src/frontend/com_fft.c ,
 * src/frontend/com_fft.h ,
 * src/frontend/spec.c ,
 * src/frontend/spec.h :
    collect free_pnode_o() in "parse.h"

2010-10-15  Robert Larice